@@ -25,7 +25,7 @@
 
     <groupId>com.okta.sdk</groupId>
     <artifactId>okta-sdk-root</artifactId>
-    <version>24.0.2-SNAPSHOT</version>
+    <version>25.0.1-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <name>Okta Java SDK</name>
@@ -35,11 +35,11 @@
 
     <properties>
         <jackson.version>2.18.2</jackson.version>
-        <snakeyaml.version>2.4</snakeyaml.version>
+        <snakeyaml.version>2.0</snakeyaml.version>
         <bouncycastle.version>1.78.1</bouncycastle.version>
         <jjwt.version>0.12.6</jjwt.version>
         <org.apache.httpcomponents.client5.version>5.5.1</org.apache.httpcomponents.client5.version>
-        <okta.sdk.previousVersion>23.0.1</okta.sdk.previousVersion>
+        <okta.sdk.previousVersion>24.0.1</okta.sdk.previousVersion>
         <okta.commons.version>2.0.1</okta.commons.version>
         <com.google.auto.service.version>1.1.1</com.google.auto.service.version>
         <github.slug>okta/okta-sdk-java</github.slug>
@@ -64,7 +64,6 @@
                 <type>pom</type>
             </dependency>
 
-            <!-- Inter project dependencies -->
             <dependency>
                 <groupId>com.okta.sdk</groupId>
                 <artifactId>okta-sdk-api</artifactId>
@@ -76,7 +75,6 @@
                 <version>${project.version}</version>
             </dependency>
 
-            <!-- Other Okta Projects -->
             <dependency>
                 <groupId>com.okta.commons</groupId>
                 <artifactId>okta-config-check</artifactId>
@@ -99,21 +97,25 @@
                 <version>1.3.2</version>
             </dependency>
 
-            <!-- ITs -->
+            <!-- Force commons-lang3 to 3.18.0 to fix CVE-2025-48924 -->
+            <dependency>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-lang3</artifactId>
+                <version>3.18.0</version>
+            </dependency>
+
             <dependency>
                 <groupId>com.okta.sdk</groupId>
                 <artifactId>okta-sdk-integration-tests</artifactId>
-                <version>23.0.1</version>
+                <version>${project.version}</version>
             </dependency>
 
-            <!-- Examples -->
             <dependency>
                 <groupId>com.okta.sdk</groupId>
                 <artifactId>okta-sdk-examples-quickstart</artifactId>
-                <version>23.0.1</version>
+                <version>${project.version}</version>
             </dependency>
 
-            <!-- Logging -->
             <dependency>
                 <groupId>org.slf4j</groupId>
                 <artifactId>slf4j-api</artifactId>
@@ -130,20 +132,17 @@
                 <version>1.3.14</version>
             </dependency>
 
-            <!-- Bouncy Castle -->
             <dependency>
                 <groupId>org.bouncycastle</groupId>
                 <artifactId>bcprov-jdk18on</artifactId>
                 <version>${bouncycastle.version}</version>
             </dependency>
-
             <dependency>
                 <groupId>org.bouncycastle</groupId>
                 <artifactId>bcpkix-jdk18on</artifactId>
                 <version>${bouncycastle.version}</version>
             </dependency>
 
-            <!-- JJWT -->
             <dependency>
                 <groupId>io.jsonwebtoken</groupId>
                 <artifactId>jjwt-api</artifactId>
@@ -172,11 +171,6 @@
                 <groupId>org.yaml</groupId>
                 <artifactId>snakeyaml</artifactId>
                 <version>${snakeyaml.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.apache.commons</groupId>
-                <artifactId>commons-lang3</artifactId>
-                <version>3.18.0</version>
             </dependency>
             <dependency>
                 <groupId>com.google.auto.service</groupId>
@@ -219,7 +213,6 @@
 
     <dependencies>
 
-        <!-- Test dependencies -->
         <dependency>
             <groupId>org.testng</groupId>
             <artifactId>testng</artifactId>
@@ -237,7 +230,7 @@
                 <plugin>
                     <groupId>org.sonatype.central</groupId>
                     <artifactId>central-publishing-maven-plugin</artifactId>
-                    <version>0.9.0</version>
+                    <version>0.8.0</version>
                     <extensions>true</extensions>
                     <configuration>
                         <publishingServerId>central</publishingServerId>
@@ -255,6 +248,7 @@
                         <parallel>classesAndMethods</parallel>
                         <threadCount>5</threadCount>
                         <skipTests>${skipImplTests}</skipTests>
+                        <argLine>@{argLine} --add-opens java.base/java.util=ALL-UNNAMED --add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.lang.reflect=ALL-UNNAMED --add-opens java.base/java.text=ALL-UNNAMED --add-opens java.base/java.io=ALL-UNNAMED</argLine>
                     </configuration>
                 </plugin>
                 <plugin>
@@ -263,9 +257,7 @@
                     <configuration>
                         <trimStackTrace>false</trimStackTrace>
                         <reuseForks>true</reuseForks>
-                        <!--<forkCount>2C</forkCount>
-                        <parallel>classes</parallel>
-                        <threadCount>5</threadCount>-->
+                        <argLine>@{argLine} --add-opens java.base/java.util=ALL-UNNAMED --add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.lang.reflect=ALL-UNNAMED --add-opens java.base/java.text=ALL-UNNAMED --add-opens java.base/java.io=ALL-UNNAMED</argLine>
                     </configuration>
                 </plugin>
                 <plugin>
@@ -273,30 +265,40 @@
                     <artifactId>maven-pmd-plugin</artifactId>
                     <configuration>
                         <excludeRoots>
-                            <!-- exclude the generated code from PMD, Findbugs will still run -->
                             <excludeRoot>${project.build.directory}/generated-sources/openapi</excludeRoot>
                         </excludeRoots>
                         <excludes>
-                            <!-- lang contains a few files copied from other projects -->
                             <exclude>**/lang/*.java</exclude>
                             <exclude>**/com/okta/sdk/impl/util/Base64.java</exclude>
                             <exclude>**/com/okta/sdk/impl/util/BaseNCodec.java</exclude>
                             <exclude>**/com/okta/sdk/impl/util/LinkedCaseInsensitiveMap</exclude>
-                            <!-- caching needs a little work -->
                             <exclude>**/com/okta/sdk/impl/ds/cache/WriteCacheFilter.java</exclude>
                         </excludes>
                     </configuration>
                 </plugin>
+
                 <plugin>
                     <groupId>org.jacoco</groupId>
                     <artifactId>jacoco-maven-plugin</artifactId>
                     <configuration>
-                        <!-- exclude generated enums coverage -->
                         <excludes>
-                            <exclude>**/com/okta/sdk/resource/**/*</exclude>
                             <exclude>**/quickstart/**/*</exclude>
                         </excludes>
                     </configuration>
+                    <executions>
+                        <execution>
+                            <id>prepare-agent</id>
+                            <goals>
+                                <goal>prepare-agent</goal>
+                            </goals>
+                        </execution>
+                        <execution>
+                            <id>prepare-agent-integration</id>
+                            <goals>
+                                <goal>prepare-agent-integration</goal>
+                            </goals>
+                        </execution>
+                    </executions>
                 </plugin>
                 <plugin>
                     <groupId>org.codehaus.mojo</groupId>
@@ -338,13 +340,9 @@
                     <groupId>org.owasp</groupId>
                     <artifactId>dependency-check-maven</artifactId>
                     <version>12.1.0</version>
-
                     <configuration>
-                        <!-- no js is used in this project -->
                         <retireJsAnalyzerEnabled>false</retireJsAnalyzerEnabled>
                         <ossindexAnalyzerEnabled>false</ossindexAnalyzerEnabled>
-                        <ossIndexUsername>${env.OSS_EMAIL}</ossIndexUsername>
-                        <ossIndexPassword>${env.OSS_TOKEN}</ossIndexPassword>
                     </configuration>
                 </plugin>
             </plugins>
@@ -395,7 +393,6 @@
     </profiles>
 
   <scm>
-    <tag>okta-sdk-root-24.0.1</tag>
+    <tag>okta-sdk-root-25.0.0</tag>
   </scm>
 </project>
-
